<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_activity_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <!-- Acquired rate options -->
            <androidx.cardview.widget.CardView style="@style/CardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CardHeaderText"
                        android:text="@string/acquired_rate" />

                    <View style="@style/HorizontalDivider" />

                    <RadioGroup
                        android:id="@+id/acquired_rate_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/sell_lar_radio_button"
                            style="@style/RadioButtonStyle"
                            android:checked="true"
                            android:text="@string/sell_lar_header" />

                        <RadioButton
                            android:id="@+id/net_radio_button"
                            style="@style/RadioButtonStyle"
                            android:text="@string/net" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Taxes and fees options-->
            <androidx.cardview.widget.CardView style="@style/CardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CardHeaderText"
                        android:text="@string/taxes_and_fees" />

                    <View style="@style/HorizontalDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/taxes_included_sell_rate_radio_button"
                                style="@style/CheckBoxStyle"
                                android:text="@string/taxes_included_in_sell_rate" />

                            <CheckBox
                                android:id="@+id/fees_included_sell_rate_radio_button"
                                style="@style/CheckBoxStyle"
                                android:text="@string/fees_included_in_sell_rate" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/taxes_waived_rate_plan_check_box"
                                style="@style/CheckBoxStyle"
                                android:text="@string/taxes_waived_in_rate_plan" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Amounts -->
            <androidx.cardview.widget.CardView style="@style/CardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CardHeaderText"
                        android:text="@string/amounts" />

                    <View style="@style/HorizontalDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/TextInputLayoutStyle"
                                android:hint="@string/acquired_rate">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/acquired_rate_edit_text"
                                    style="@style/TextInputEditTextStyle" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/TextInputLayoutStyle"
                                android:hint="@string/taxes">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/taxes_edit_text"
                                    style="@style/TextInputEditTextStyle" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/TextInputLayoutStyle"
                                android:hint="@string/compensation">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/compensation_edit_text"
                                    style="@style/TextInputEditTextStyle" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/TextInputLayoutStyle"
                                android:hint="@string/promotion">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/promotion_edit_text"
                                    style="@style/TextInputEditTextStyle" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/calculate_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli"
                    android:text="@string/calculate" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>